<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>numsr_patches</name>
  <version>0.0.1</version>
  <description>Northwestern MSR patches for ROS and related packages</description>
  <maintainer email="elwin@northwestern.edu">elwin</maintainer>
  <license>MIT</license>

  <build_depend>librealsense2</build_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
